<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">1_HoloSysinfoWidget</string>

    <string name="name_setting_activity">Preference</string>

    <string name="widget_name">1_Sysinfo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="total_ram">Total RAM: </string>
    <string name="available_ram">Available RAM: </string>

    <string name="widget_lbl_ram">RAM</string>

    <string name="widget_lbl_storage">Storage</string>
    <string name="total_storage">Total Storage:</string>
    <string name="available_storage">Available Storage:</string>
    <string name="placeholder_ram">-.--GB</string>
    <string name="placeholder_ram_percentage">XX%</string>
    <string name="placeholder_storage">-.--GB</string>
    <string name="placeholder_storage_percentage">XX%</string>

    <string name="lbl_memory_used">&#160;used.</string>

    <!-- Setting -->
    <string name="pref_category_notification">Notification</string>
    <string name="pref_key_activate_notification">activate_noti</string>
    <string name="pref_title_activate_notification">Activate Notification</string>
    <string name="pref_key_show_notification_on_boot">noti_on_boot</string>
    <string name="pref_title_notification_on_boot">Activate on boot</string>

    <string name="pref_category_widget">Widget</string>
    <string name="pref_key_widget_bg">widget_bg</string>
    <string name="pref_title_widget_bg">Background</string>
    <string name="pref_dialog_title_widget_bg">Background Style</string>

    <string name="rounded_widget_bg_white">rounded_widget_bg_white</string>
    <string name="rounded_widget_bg_black">rounded_widget_bg_black</string>

    <string name="pref_summary_widget_bg">Background Color:&#160;</string>
    <string name="pref_summary_widget_bg_white">White</string>
    <string name="pref_summary_widget_bg_black">Black</string>
</resources>
