<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_category_notification">

        <SwitchPreference
            android:key="@string/pref_key_activate_notification"
            android:title="@string/pref_title_activate_notification"
            android:switchTextOff="OFF"
            android:switchTextOn="ON"
            android:defaultValue="true"/>

        <SwitchPreference
            android:key="@string/pref_key_show_notification_on_boot"
            android:title="@string/pref_title_notification_on_boot"
            android:switchTextOff="OFF"
            android:switchTextOn="ON"
            android:defaultValue="true"
            android:dependency="@string/pref_key_activate_notification"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_widget">

        <ListPreference
            android:key="@string/pref_key_widget_bg"
            android:title="@string/pref_title_widget_bg"
            android:dialogTitle="@string/pref_dialog_title_widget_bg"
            android:entries="@array/widget_bg_list"
            android:entryValues="@array/widget_bg_list_value"
            android:defaultValue="rounded_widget_bg_white"/>
    </PreferenceCategory>
</PreferenceScreen>