<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <!-- RAM info -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_text">

        <TextView
            android:id="@+id/lbl_total_ram"
            android:text="@string/total_ram"
            android:textSize="@dimen/text_size_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/var_total_ram"
            android:textSize="@dimen/text_size_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/placeholder_ram"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_text">

        <TextView
            android:id="@+id/lbl_available_ram"
            android:text="@string/available_ram"
            android:textSize="@dimen/text_size_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/var_available_ram"
            android:textSize="@dimen/text_size_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/placeholder_ram"/>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/var_progress_ram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:max="100"
        android:progress="50"
        style="?android:progressBarStyleHorizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/var_ram_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_ram_percentage"
            android:layout_weight="1"
            android:gravity="right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_memory_used"/>

        </LinearLayout>




    <!-- Storage info -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_text">

        <TextView
            android:id="@+id/lbl_total_storage"
            android:text="@string/total_storage"
            android:textSize="@dimen/text_size_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/var_total_storage"
            android:textSize="@dimen/text_size_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/placeholder_storage"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_text">

        <TextView
            android:id="@+id/lbl_available_storage"
            android:text="@string/available_storage"
            android:textSize="@dimen/text_size_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/var_available_storage"
            android:textSize="@dimen/text_size_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/placeholder_storage"/>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/var_progress_storage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:max="100"
        android:progress="50"
        style="?android:progressBarStyleHorizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/var_storage_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_storage_percentage"
            android:layout_weight="1"
            android:gravity="right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_memory_used"/>

    </LinearLayout>

</LinearLayout>